test/syntax-errors/operande1.sos
# operande ne peut pas commencer par return

id = return 